done with read me

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div class="row">
                 <div class="card col-4" style="width: 18rem;">
                 <div class="card-body">
-                <h5 class="card-title">Nando Davila</h5>
+                <h5 class="card-title">Lewis Christmas</h5>
                 <p class="card-text">Manager</p>
                 </div>
                 <ul class="list-group list-group-flush">
                 <li class="list-group-item">1</li>
-                <li class="list-group-item"><a href = "mailto: nandodavila94@gmail.com">nandodavila94@gmail.com</a></li>
-                <li class="list-group-item">4043793848</li>
+                <li class="list-group-item"><a href = "mailto: lchrist@gmail.com">lchrist@gmail.com</a></li>
+                <li class="list-group-item">4041234567</li>
                 </ul>
             </div>
 <div class="card col-4" style="width: 18rem;">
@@ -39,19 +39,19 @@
                 </div>
                 <ul class="list-group list-group-flush">
                 <li class="list-group-item">2</li>
-                <li class="list-group-item"><a href = "mailto: zchrist95@gmail.com">zchrist95@gmail.com</a></li>
-                <li class="list-group-item"><a href="https://github.com/zchrist">zchrist</a></li>
+                <li class="list-group-item"><a href = "mailto: zchrist@gmail.com">zchrist@gmail.com</a></li>
+                <li class="list-group-item"><a href="https://github.com/nandodavila">nandodavila</a></li>
                 </ul>
                 </div>
 <div class="card col-4" style="width: 18rem;">
                     <div class="card-body">
-                    <h5 class="card-title">Nando</h5>
+                    <h5 class="card-title">Nando Davila</h5>
                     <p class="card-text">Intern</p>
                     </div>
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item">3</li>
-                    <li class="list-group-item"><a href = "mailto: testtest@email.com">testtest@email.com</a></li>
-                    <li class="list-group-item">GT</li>
+                    <li class="list-group-item"><a href = "mailto: nandodavila94@gmail.com">nandodavila94@gmail.com</a></li>
+                    <li class="list-group-item">Georgia Tech Boot Camp</li>
                     </ul>
                     </div>
                 </div>
