--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </div>
                 <ul class="list-group list-group-flush">
                 <li class="list-group-item">1</li>
-                <li class="list-group-item"><a href = "mailto: lchrist@gmail.com">lchrist@gmail.com</a></li>
-                <li class="list-group-item">4041234567</li>
+                <li class="list-group-item"><a href = "mailto: test@email.com">test@email.com</a></li>
+                <li class="list-group-item">1234567890</li>
                 </ul>
             </div>
 <div class="card col-4" style="width: 18rem;">
@@ -39,7 +39,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                 <li class="list-group-item">2</li>
-                <li class="list-group-item"><a href = "mailto: zchrist@gmail.com">zchrist@gmail.com</a></li>
+                <li class="list-group-item"><a href = "mailto: test@email.com">test@email.com</a></li>
                 <li class="list-group-item"><a href="https://github.com/nandodavila">nandodavila</a></li>
                 </ul>
                 </div>
@@ -51,7 +51,7 @@
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item">3</li>
                     <li class="list-group-item"><a href = "mailto: nandodavila94@gmail.com">nandodavila94@gmail.com</a></li>
-                    <li class="list-group-item">Georgia Tech Boot Camp</li>
+                    <li class="list-group-item">GT Bootcamp</li>
                     </ul>
                     </div>
                 </div>
